removing parameters from previous installations

--- a/lg.config
+++ b/lg.config
@@ -1,19 +1,19 @@
-title = AS 3128 Looking Glass
-noc_email = noc@uwsys.net
-noc_phone = 608-263-4188
-operator = UW Network Services
+title = AS 65535 Looking Glass
+noc_email = noc@example.com
+noc_phone = 1-900-649-2568
+operator = Example dot Com
 
 
 # for most web servers cache_dir must be writable by uid nobody
-tmp_dir = /tmp
-tmp_scriptname = as3128lg
+tmp_dir = /var/tmp/lg
+tmp_scriptname = as65535lg
 
 debug = 0
-Clogin_opts = -f /usr/local/ns/etc/lookingglass.cloginrc
-Timeoutcmd = /usr/local/ns/bin/timeoutcmd -60
+Clogin_opts = -f /usr/local/etc/lookingglass.cloginrc
+Timeoutcmd = /usr/bin/timeout 60s
 
 # json
-lg_hosts = /usr/local/ns/etc/lg_hosts.json
+lg_hosts = /usr/local/etc/lg_hosts.json
 
 #==================================================================
 #    define the queries that can be run, per device class.
@@ -23,4 +23,4 @@ lg_hosts = /usr/local/ns/etc/lg_hosts.json
 #       2 means it MUST take an argument
 #
 #==================================================================
-lg_commands = /usr/local/ns/etc/lg_commands.json
+lg_commands = /usr/local/etc/lg_commands.json
